test/libsolidity/syntaxTests/structs/contract_global_struct_name_clash.sol
contract S {}
struct S { uint256 a; }
// ----
// DeclarationError 2333: (14-37='struct S { uint256 a; }'): Identifier already declared.
